Added validation route to validate digipins
